[package]
name = "telegram_group_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
mime_guess = "2.0.4"
tokio = { version = "1", features = [ "full" ] }
log = "0.4.20"
simple_logger = { version = "4.2.0", default-features = false, features = [
    "colors",
] }
egui = "0.24.1"
rfd = "0.12.1"
eframe = "0.24.1"
env_logger = "0.10.1"
